--- a/code/app/src/main/res/layout/mood_event_content_with_photo.xml
+++ b/code/app/src/main/res/layout/mood_event_content_with_photo.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                android:src="@drawable/hi"
+                android:src="@drawable/mood"
                 android:contentDescription="@string/mood_photo" />
 
             <LinearLayout
