--- a/code/app/src/main/res/layout/activity_my_profile.xml
+++ b/code/app/src/main/res/layout/activity_my_profile.xml
@@ -69,15 +69,14 @@
 
         <ImageButton
             android:id="@+id/btn_addMoodEventFromProfile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="24dp"
+            android:layout_margin="20dp"
             android:background="@null"
             android:contentDescription="@string/addMoodEvent"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
             android:src="@drawable/plus_symbol_button" />
-
     </FrameLayout>
 
 </LinearLayout>
