--- a/code/app/src/main/res/layout/update_or_delete.xml
+++ b/code/app/src/main/res/layout/update_or_delete.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@id/btnBack" />
 
     <EditText
-        android:id="@+id/EditTextUpdateTextExplanation"
+        android:id="@+id/updateText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -47,8 +47,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnBack" />
 
-
-
     <Spinner
         android:id="@+id/spinnerSocialSituation"
         android:layout_width="0dp"
@@ -59,7 +57,7 @@
         android:entries="@array/social_situation_array"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/EditTextUpdateTextExplanation" />
+        app:layout_constraintTop_toBottomOf="@id/updateText" />
 
     <CheckBox
         android:id="@+id/checkboxShareLocation"
@@ -71,19 +69,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/spinnerSocialSituation" />
 
-
-    <TextView
-        android:id="@+id/datePickerAddMood"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:padding="8dp"
-        android:text="@string/date_for_mood_event"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/checkboxShareLocation" />
-
     <CheckBox
         android:id="@+id/privacyCheckBoxUpdate"
         android:layout_width="wrap_content"
@@ -92,7 +77,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/private_this_mood_event"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/datePickerAddMood" />
+        app:layout_constraintTop_toBottomOf="@id/checkboxShareLocation" />
 
     <LinearLayout
         android:layout_width="match_parent"
