--- a/code/app/src/main/res/layout/add_mood.xml
+++ b/code/app/src/main/res/layout/add_mood.xml
@@ -55,6 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:textColor="@color/black"
                     android:maxLength="200"
                     android:hint="@string/hint_reason_why_text" />
 
@@ -68,6 +69,7 @@
                         android:id="@+id/spinnerMood"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:layout_marginHorizontal="10dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -78,6 +80,7 @@
                         android:id="@+id/spinnerSocialSituation"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:layout_marginHorizontal="10dp"
                         android:entries="@array/social_situation_array"
                         app:layout_constraintTop_toTopOf="parent"
@@ -105,6 +108,7 @@
                     android:autofillHints="Date"
                     android:focusable="false"
                     android:ems="10"
+                    android:textColor="@color/black"
                     android:hint="@string/date_for_mood_event"
                     android:inputType="date" />
 
@@ -118,6 +122,7 @@
                         android:id="@+id/privacyCheckBox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:text="@string/privateString"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -127,6 +132,7 @@
                         android:id="@+id/checkboxShareLocation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:text="@string/share_location"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintLeft_toRightOf="@id/privacyCheckBox"
