--- a/code/app/src/main/res/layout/follow_request_list_content.xml
+++ b/code/app/src/main/res/layout/follow_request_list_content.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="5dp"
+    android:id="@+id/followReqView"
     android:background="#000000"
     android:layout_marginBottom="8dp">
 
