--- a/code/app/src/main/res/layout/enhanced_mood_event_with_photo.xml
+++ b/code/app/src/main/res/layout/enhanced_mood_event_with_photo.xml
@@ -37,7 +37,16 @@
             android:text="@string/user"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
+        <ImageButton
+            android:id="@+id/editMenuIcon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/back"
+            android:scaleType="fitCenter"
+            android:src="@drawable/edit_icon"/>
     </LinearLayout>
 
     <LinearLayout
