--- a/code/app/src/main/res/layout/enhanced_mood_event_with_photo.xml
+++ b/code/app/src/main/res/layout/enhanced_mood_event_with_photo.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/border"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,10 +10,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:background="@color/black"
         android:gravity="center_vertical"
-        android:padding="8dp"
-        android:background="@color/black">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <ImageButton
             android:id="@+id/backButton"
@@ -37,7 +36,8 @@
             android:text="@string/user"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
+
         <ImageButton
             android:id="@+id/editMenuIcon"
             android:layout_width="48dp"
@@ -46,7 +46,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/back"
             android:scaleType="fitCenter"
-            android:src="@drawable/edit_icon"/>
+            android:src="@drawable/edit_icon" />
     </LinearLayout>
 
     <LinearLayout
