--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
 
     <color name="bg_dark">#1A1A1A</color>
     <color name="button">#5366D3</color>
+    <color name="unselectedButton">#7B5366D3</color>
 
 </resources>
