--- a/code/app/src/main/res/layout/mood_list_view.xml
+++ b/code/app/src/main/res/layout/mood_list_view.xml
@@ -72,7 +72,7 @@
 
     </LinearLayout>
 
-    <ListView
+    <com.example.y.utils.MoodListView
         android:id="@+id/listviewMoodEvents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
