--- a/code/app/src/main/res/layout/update_or_delete.xml
+++ b/code/app/src/main/res/layout/update_or_delete.xml
@@ -163,7 +163,8 @@
             android:layout_margin="8dp"
             app:backgroundTint="@color/button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/deleteMoodButton"/>
+            app:layout_constraintStart_toEndOf="@id/deleteMoodButton"
+            tools:ignore="MissingConstraints" />
         <Button
             android:id="@+id/deleteMoodButton"
             android:layout_width="0dp"
