--- a/code/app/src/main/res/layout/mood_event_content_with_photo.xml
+++ b/code/app/src/main/res/layout/mood_event_content_with_photo.xml
@@ -140,7 +140,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:text="@string/reason"
+            android:text="@string/reason_why_text"
             android:textSize="14sp"
             android:textColor="#FFFFFF"
             android:layout_marginTop="8dp"
