--- a/code/app/src/main/res/layout/mood_event_content_without_photo.xml
+++ b/code/app/src/main/res/layout/mood_event_content_without_photo.xml
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:descendantFocusability="blocksDescendants"
-            android:text="@string/reason"
+            android:text="@string/reason_why_text"
             android:textSize="14sp"
             android:textColor="#FFFFFF"
             android:layout_marginTop="8dp"
