--- a/code/app/src/main/res/layout/login_screen.xml
+++ b/code/app/src/main/res/layout/login_screen.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/logo"
-        android:src="@drawable/tochange"
+        android:src="@drawable/y_logo"
         android:padding="20dp"/>
 
     <EditText
