--- a/code/app/src/main/res/layout/login_screen.xml
+++ b/code/app/src/main/res/layout/login_screen.xml
@@ -10,8 +10,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_gravity="center"
         android:contentDescription="@string/logo"
         android:src="@drawable/y_logo"
         android:padding="20dp"/>
