--- a/code/app/src/main/res/layout/enhanced_mood_event_with_photo.xml
+++ b/code/app/src/main/res/layout/enhanced_mood_event_with_photo.xml
@@ -46,7 +46,7 @@
             android:layout_height="30dp"
             android:layout_margin="8dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@string/back"
+            android:contentDescription="@string/editbutton"
             android:scaleType="fitCenter"
             android:src="@drawable/edit_icon"
             app:tint="@color/white" />
