--- a/code/app/src/main/res/layout/activity_slot_machine.xml
+++ b/code/app/src/main/res/layout/activity_slot_machine.xml
@@ -33,7 +33,6 @@
         android:id="@+id/slotMachineLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/hi"
         app:layout_constraintTop_toBottomOf="@id/slotMachineHeader"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:textColor="@color/white"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             android:text="$100" />
 
         <FrameLayout
@@ -52,7 +53,7 @@
             android:layout_width="350dp"
             android:layout_height="150dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/tochange" >
+            android:background="#111" >
 
             <LinearLayout
                 android:layout_width="wrap_content"
